--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.1.0",
   "license": "0BSD",
   "scripts": {
-    "deploy":" gatsby build --prefix-paths && gh-pages -d public",
+    "deploy": " gatsby build --prefix-paths && gh-pages -d public",
     "build": "gatsby build",
     "develop": "gatsby develop",
     "start": "gatsby develop",
@@ -18,6 +18,8 @@
     "@chakra-ui/react": "^2.4.6",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "buffer": "^6.0.3",
+    "cborg": "^1.10.0",
     "framer-motion": "^8.4.0",
     "gatsby": "^5.3.3",
     "react": "^18.2.0",
